# django-prune-uploads

./: .gitignore  MANIFEST.in  README.rst  setup.cfg  setup.py
prune_uploads/management/commands/: prune_uploads.py
