[metadata]
name = django_prune_uploads
version = attr: prune_uploads.__version__
description = Prune and maintain file uploads
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/matthiask/django-prune-uploads/
author = Matthias Kestenholz
author_email = mk@feinheit.ch
license = MIT
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Application Frameworks

[options]
packages = find:
include_package_data = True
zip_safe = False
